# Character-Bot-V4

./: IO.py  README.md  SQLInterface.py  ServerSideWork.py
ThonkerBot4.0SampleAfter/: BOTInfo.json  IO.py  SQLInfo.Json  SQLInterface.py  pyproject.toml
ThonkerBot4.0SampleAfter/cogs/: serverwork.py
